--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ django-nova-syspanel/src/django_nova_syspanel.egg-info
 openstack-dashboard/.dashboard-venv
 openstack-dashboard/local/dashboard_openstack.sqlite3
 openstack-dashboard/local/local_settings.py
+.idea/
+dair.iml
+openstack-dashboard/media/admin
+
